--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^2.5.1",
     "serve": "^13.0.2",
     "snowpack": "^3.8.8",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vercel": "^23.1.2"
   }
 }
