--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
-    "serve": "serve build"
+    "serve": "serve build",
+    "prod": "vercel --prod"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.3",
+    "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/w3c-web-serial": "^1.0.2",
-    "framer-motion": "^5",
+    "framer-motion": "^6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -30,15 +31,15 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/snowpack-env": "^2.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "eslint": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.28.0",
     "prettier": "^2.5.1",
     "serve": "^13.0.2",
     "snowpack": "^3.8.8",
-    "typescript": "^4.5.4",
+    "typescript": "^4.5.5",
     "vercel": "^23.1.2"
   }
 }
