--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "terminal",
-  "description": "> ✨ Bootstrapped with Create Snowpack App (CSA).",
+  "description": "> ✨ Web terminal for serial connections",
   "version": "1.0.0",
-  "main": "index.js",
+  "source": "./src/index.html",
   "author": "Danial Chitnis",
   "license": "MIT",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "start": "parcel",
+    "build": "parcel build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -15,31 +15,28 @@
     "prod": "vercel --prod"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.1",
+    "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@types/w3c-web-serial": "^1.0.2",
-    "framer-motion": "^6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@types/w3c-web-serial": "^1.0.3",
+    "framer-motion": "^8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.2.0",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/snowpack-env": "^2.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^8.8.0",
+    "@testing-library/react": "^13.4.0",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.28.0",
-    "prettier": "^2.5.1",
-    "serve": "^13.0.2",
-    "snowpack": "^3.8.8",
-    "typescript": "^4.5.5",
-    "vercel": "^23.1.2"
+    "eslint-plugin-react": "^7.32.1",
+    "parcel": "^2.8.2",
+    "prettier": "^2.8.3",
+    "process": "^0.11.10",
+    "serve": "^14.1.2",
+    "typescript": "^4.9.4",
+    "vercel": "^28.12.6"
   }
 }
